--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/Benny/workspace/ErowidJavaAPI/release/ErowidJavaAPI_0.2.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Benny/workspace/ErowidJavaAPI/release/ErowidJavaAPI_0.3.0.jar"/>
+	<classpathentry kind="lib" path="C:/Java Libraries/mysql-connector-java-5.1.38-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
